--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+ {% load socialaccount %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>NESIS - NASA Earth Action Inventory System</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    
+    <link href='https://fonts.googleapis.com/css?family=Work Sans' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     {% block extra_css %}{% endblock %}
 </head>
 <body>
@@ -23,6 +26,14 @@
                     <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'inventory' %}">Inventory</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">About</a></li>
+                    <li class="nav-item">
+                        {% if user.is_authenticated %}
+                        <p class="display-name">Welcome, {{ user.username }} |</p>
+                        <p><a class="nav-link" href="/accounts/logout/">Log Out</a></p>
+                    {% else %}
+                        <a class="nav-link" href="{% provider_login_url 'google' %}">Login</a>
+                    {% endif %}
+                    </li>
                 </ul>
             </div>
         </div>
