--- a/templates/customer_organization.html
+++ b/templates/customer_organization.html
@@ -13,6 +13,9 @@
     <title>Customer Org</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <link href="https://cdn.datatables.net/2.2.2/css/dataTables.dataTables.min.css" rel="stylesheet"/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -88,15 +91,33 @@
                                         </ul>
                                 </div>
                                  <div class="mb-3 common"> Engaged missions:
-                                    <ul  class="list-group">
+
+                                <table id="myTable" class="display">
+                                    <thead>
+                                        <tr>
+                                            <th>Mission</th>
+                                            <th>Role</th>
+                                            <th></th>
+                                            <th></th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
                                     {% for id, value in form.missions.field.choices %}
-                                        <li  class="list-group-item">
-                                            <input type="checkbox" name="missions" value="{{ id }}" id="missions_{{ id }}">
-                                            <label for="missions_{{ id }}">{{ value }}</label>
-                                        </li>
-                                    {% endfor %}
-                                    </ul>
-                                </div>
+                                        <tr>
+                                            <td><label for="missions_{{ id }}">{{ value }}</label></td>
+                                            <td>Role</td>
+                                            <td>
+                                     
+                                                    <button class="btn btn-success btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-edit"></i></button>
+                                            </td>
+                                               <td>
+                                                    <button class="btn btn-danger btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Delete"><i class="fa fa-trash"></i></button>
+                                                </td>
+                                           </tr>
+                                         {% endfor %}
+                                    </tbody>
+                                </table>
+                                 </div>
                                  <div class="mb-3 common"> Role for mission
                                 {{ form.role_for_mission }}
                                 </div>
@@ -138,5 +159,9 @@
             </div>
         </div>
     </div>
+    <script src="https://cdn.datatables.net/2.2.2/js/dataTables.min.js"></script>
+    <script>
+        let table = new DataTable('#myTable');
+    </script>
 </body>
 </html>
